Fix Substack post icon sizing on mobile
Add matching SVG size rule for .substack .post in the iPhone 6
media query so icons scale consistently with the heard column.

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -669,6 +669,13 @@ footer {
   }
 
   .meta {
+    .substack {
+      .post svg {
+        width: calc(var(--bs-body-font-size) - 5px);
+        height: calc(var(--bs-body-font-size) - 5px);
+      }
+    }
+
     .last-fm {
       .track {
         svg {
